ENH: research on CNR

--- a/analysis/brain_map.ipynb
+++ b/analysis/brain_map.ipynb
@@ -6,130 +6,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ds directory : /nfs/z1/userhome/ZhouMing/workingdir/BIN/action/MEG/raw_meg/sub-01/ses-1/meg/sub-01_ses-1_task-action_run-01_meg.ds\n",
-      "    res4 data read.\n",
-      "    hc data read.\n",
-      "    Separate EEG position data file read.\n",
-      "    Quaternion matching (desired vs. transformed):\n",
-      "       6.03   88.03    0.00 mm <->    6.03   88.03    0.00 mm (orig :  -52.08   68.00 -284.59 mm) diff =    0.000 mm\n",
-      "      -6.03  -88.03    0.00 mm <->   -6.03  -88.03    0.00 mm (orig :   61.15  -67.21 -290.74 mm) diff =    0.000 mm\n",
-      "     103.73    0.00    0.00 mm <->  103.73    0.00    0.00 mm (orig :   73.68   65.67 -246.22 mm) diff =    0.000 mm\n",
-      "    Coordinate transformations established.\n",
-      "    Polhemus data for 3 HPI coils added\n",
-      "    Device coordinate locations for 3 HPI coils added\n",
-      "    Measurement info composed.\n",
-      "Finding samples for /nfs/z1/userhome/ZhouMing/workingdir/BIN/action/MEG/raw_meg/sub-01/ses-1/meg/sub-01_ses-1_task-action_run-01_meg.ds/sub-01_ses-1_task-action_run-01_meg.meg4: \n",
-      "    System clock channel is available, checking which samples are valid.\n",
-      "    1 x 432000 = 432000 samples from 409 chs\n",
-      "Current compensation grade : 3\n"
+      "/usr/local/neurosoft/anaconda3/lib/python3.8/site-packages/nilearn/glm/__init__.py:55: FutureWarning: The nilearn.glm module is experimental. It may change in any future release of Nilearn.\n",
+      "  warn('The nilearn.glm module is experimental. '\n"
      ]
     }
    ],
-   "source": [
-    "import mne\n",
-    "\n",
-    "file = '/nfs/z1/userhome/ZhouMing/workingdir/BIN/action/MEG/raw_meg/sub-01/ses-1/meg/sub-01_ses-1_task-action_run-01_meg.ds'\n",
-    "raw = mne.io.read_raw_ctf(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<table class=\"table table-hover table-striped table-sm table-responsive small\">\n",
-       "    <tr>\n",
-       "        <th>Measurement date</th>\n",
-       "        <td>November 18, 2021  14:44:00 GMT</td>\n",
-       "        \n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <th>Experimenter</th>\n",
-       "        <td>xyfeng</td>\n",
-       "        \n",
-       "    </tr>\n",
-       "        <th>Participant</th>\n",
-       "            <td>S01</td>\n",
-       "        \n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <th>Digitized points</th>\n",
-       "        <td>3 points</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <th>Good channels</th>\n",
-       "        <td>108 misc, 28 Reference Magnetometers, 273 Magnetometers</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <th>Bad channels</th>\n",
-       "        <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <th>EOG channels</th>\n",
-       "        <td>Not available</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <th>ECG channels</th>\n",
-       "        <td>Not available</td>\n",
-       "    <tr>\n",
-       "        <th>Sampling frequency</th>\n",
-       "        <td>1200.00 Hz</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <th>Highpass</th>\n",
-       "        <td>0.00 Hz</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <th>Lowpass</th>\n",
-       "        <td>600.00 Hz</td>\n",
-       "    </tr>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "<Info | 16 non-empty values\n",
-       " bads: []\n",
-       " ch_names: SCLK01-177, BG1-4504, BG2-4504, BG3-4504, BP1-4504, BP2-4504, ...\n",
-       " chs: 108 misc, 28 Reference Magnetometers, 273 Magnetometers\n",
-       " comps: 5 items (list)\n",
-       " ctf_head_t: CTF/4D/KIT head -> head transform\n",
-       " custom_ref_applied: False\n",
-       " dev_ctf_t: MEG device -> CTF/4D/KIT head transform\n",
-       " dev_head_t: MEG device -> head transform\n",
-       " dig: 3 items (3 Cardinal)\n",
-       " experimenter: xyfeng\n",
-       " highpass: 0.0 Hz\n",
-       " hpi_results: 1 item (list)\n",
-       " lowpass: 600.0 Hz\n",
-       " meas_date: 2021-11-18 14:44:00 UTC\n",
-       " meas_id: 4 items (dict)\n",
-       " nchan: 409\n",
-       " projs: []\n",
-       " sfreq: 1200.0 Hz\n",
-       " subject_info: 1 item (dict)\n",
-       ">"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "raw.info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import os\n",
     "import json\n",
@@ -162,14 +46,51 @@
     "fmriprep_path = '/nfs/z1/zhenlab/BrainImageNet/action/data/bold/derivatives/fmriprep'\n",
     "ciftify_path = '/nfs/z1/zhenlab/BrainImageNet/action/data/bold/derivatives/ciftify'\n",
     "nifti_path = '/nfs/z1/zhenlab/BrainImageNet/action/data/bold/nifti'\n",
-    "result_path = '/nfs/z1/userhome/ZhouMing/workingdir/BIN/action/utils/data_paper/result'"
+    "result_path = '/nfs/z1/userhome/ZhouMing/workingdir/BIN/action/utils/HAD/result'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finish sub-01\n",
+      "Finish sub-02\n",
+      "Finish sub-03\n",
+      "Finish sub-04\n",
+      "Finish sub-05\n",
+      "Finish sub-06\n",
+      "Finish sub-07\n",
+      "Finish sub-08\n",
+      "Finish sub-09\n",
+      "Finish sub-10\n",
+      "Finish sub-11\n",
+      "Finish sub-12\n",
+      "Finish sub-13\n",
+      "Finish sub-14\n",
+      "Finish sub-15\n",
+      "Finish sub-16\n",
+      "Finish sub-17\n",
+      "Finish sub-18\n",
+      "Finish sub-19\n",
+      "Finish sub-20\n",
+      "Finish sub-21\n",
+      "Finish sub-22\n",
+      "Finish sub-23\n",
+      "Finish sub-24\n",
+      "Finish sub-25\n",
+      "Finish sub-26\n",
+      "Finish sub-27\n",
+      "Finish sub-28\n",
+      "Finish sub-29\n",
+      "Finish sub-30\n"
+     ]
+    }
+   ],
    "source": [
     "from scipy.stats import pearsonr\n",
     "\n",
@@ -186,13 +107,14 @@
     "    beta_sub = np.load(beta_sub_path)\n",
     "    scaler = StandardScaler()\n",
     "    beta_sum[sub_idx] = scaler.fit_transform(beta_sub)\n",
+    "    print(f'Finish {sub_name}')\n",
     "\n",
     "beta_sum = beta_sum.mean(axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,19 +127,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "transitivity map threshold: left: -0.08; right: 0.09\n",
-      "sociality map threshold: left: -0.05; right: 0.06\n"
-     ]
-    }
-   ],
+   "source": [
+    "#### Generate brain map using contrast substraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "dims = ['transitivity', 'sociality']\n",
     "brain_map = np.zeros((2, beta_sum.shape[1]))\n",
@@ -225,12 +145,49 @@
     "    # get label\n",
     "    dim_score = beh_df.loc[beh_df['dim']==dim, 'mean_score'].to_numpy()\n",
     "    dim_content = np.array([1 if item > 4 else 0 for item in dim_score])\n",
-    "    # compute brain map\n",
+    "    # # compute brain map\n",
     "    brain_map = np.zeros((1, 91282))\n",
     "    brain_map[0, :59412] = beta_sum[dim_content==1].mean(axis=0) - beta_sum[dim_content==0].mean(axis=0)\n",
     "    save_ciftifile(brain_map, pjoin(result_path, f'{dim}_map.dtseries.nii'))\n",
     "    print('%s map threshold: left: %.2f; right: %.2f'%(dim, brain_map.squeeze()[:59412].mean() - brain_map.squeeze()[:59412].std(),\n",
     "                                                       brain_map.squeeze()[:59412].mean() + brain_map.squeeze()[:59412].std()))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate brain map using correlation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import pearsonr\n",
+    "import subprocess\n",
+    "\n",
+    "dims = ['transitivity', 'sociality']\n",
+    "brain_map = np.zeros((2, beta_sum.shape[1]))\n",
+    "p_value = 0.05\n",
+    "smooth_kernel = 8\n",
+    "\n",
+    "for dim_idx, dim in enumerate(dims):\n",
+    "    # get label\n",
+    "    dim_score = beh_df.loc[beh_df['dim']==dim, 'mean_score'].to_numpy()\n",
+    "    # # compute brain map\n",
+    "    brain_map = np.zeros((1, 91282))\n",
+    "    for voxel_idx in range(59412):\n",
+    "        corr_info = pearsonr(beta_sum[:, voxel_idx], dim_score)\n",
+    "        if corr_info[1] < p_value:\n",
+    "            brain_map[0, voxel_idx] = corr_info[0]\n",
+    "    # smooth the target map\n",
+    "    out_file = pjoin(result_path, 'brain_map', f'{dim}_map_corr_smooth.dtseries.nii')\n",
+    "    save_ciftifile(brain_map, out_file)\n",
+    "    fsl_cmd = f'fslmaths {out_file} -s {smooth_kernel} -save'\n",
+    "    subprocess.check_call(fsl_cmd, shell=True)\n"
    ]
   }
  ],
