ENH: CNR and ISC

--- a/analysis/analysis_beh.ipynb
+++ b/analysis/analysis_beh.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,74 +59,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finish sub-core01_ses-ImageNet01\n",
-      "Finish sub-core01_ses-ImageNet02\n",
-      "Finish sub-core01_ses-ImageNet03\n",
-      "Finish sub-core01_ses-ImageNet04\n",
-      "Finish sub-core02_ses-ImageNet01\n",
-      "Finish sub-core02_ses-ImageNet02\n",
-      "Finish sub-core02_ses-ImageNet03\n",
-      "Finish sub-core02_ses-ImageNet04\n",
-      "Finish sub-core03_ses-ImageNet01\n",
-      "Finish sub-core03_ses-ImageNet02\n",
-      "Finish sub-core03_ses-ImageNet03\n",
-      "Finish sub-core03_ses-ImageNet04\n",
-      "Finish sub-core04_ses-ImageNet01\n",
-      "Finish sub-core04_ses-ImageNet02\n",
-      "Finish sub-core04_ses-ImageNet03\n",
-      "Finish sub-core04_ses-ImageNet04\n",
-      "Finish sub-core05_ses-ImageNet01\n",
-      "Finish sub-core05_ses-ImageNet02\n",
-      "Finish sub-core05_ses-ImageNet03\n",
-      "Finish sub-core05_ses-ImageNet04\n",
-      "Finish sub-core06_ses-ImageNet01\n",
-      "Finish sub-core06_ses-ImageNet02\n",
-      "Finish sub-core06_ses-ImageNet03\n",
-      "Finish sub-core06_ses-ImageNet04\n",
-      "Finish sub-core07_ses-ImageNet01\n",
-      "Finish sub-core07_ses-ImageNet02\n",
-      "Finish sub-core08_ses-ImageNet01\n",
-      "Finish sub-core08_ses-ImageNet02\n",
-      "Finish sub-core08_ses-ImageNet03\n",
-      "Finish sub-core08_ses-ImageNet04\n",
-      "Finish sub-core09_ses-ImageNet01\n",
-      "Finish sub-core09_ses-ImageNet02\n",
-      "Finish sub-core09_ses-ImageNet03\n",
-      "Finish sub-core09_ses-ImageNet04\n",
-      "Finish sub-core10_ses-ImageNet01\n",
-      "Finish sub-core10_ses-ImageNet02\n",
-      "Finish sub-core10_ses-ImageNet03\n",
-      "Finish sub-core10_ses-ImageNet04\n",
-      "Finish sub07_sess03\n",
-      "Finish sub07_sess04\n",
-      "Finish sub12_sess01\n",
-      "Finish sub13_sess01\n",
-      "Finish sub14_sess01\n",
-      "Finish sub16_sess01\n",
-      "Finish sub17_sess01\n",
-      "Finish sub18_sess01\n",
-      "Finish sub20_sess01\n",
-      "Finish sub21_sess01\n",
-      "Finish sub22_sess01\n",
-      "Finish sub24_sess01\n",
-      "Finish sub25_sess01\n",
-      "Finish sub26_sess01\n",
-      "Finish sub27_sess01\n",
-      "Finish sub28_sess01\n",
-      "Finish sub29_sess01\n",
-      "Finish sub30_sess01\n",
-      "Finish sub31_sess01\n",
-      "Finish sub32_sess01\n",
-      "Finish sub33_sess01\n",
-      "Finish sub34_sess01\n",
-      "Finish sub36_sess01\n"
+      "Find beh info in sub-core01_ses-ImageNet01\n",
+      "Find beh info in sub-core01_ses-ImageNet02\n",
+      "Find beh info in sub-core01_ses-ImageNet03\n",
+      "Find beh info in sub-core01_ses-ImageNet04\n",
+      "Not Find beh info in sub-core02_ses-ImageNet01\n",
+      "Find beh info in sub-core02_ses-ImageNet02\n",
+      "Find beh info in sub-core02_ses-ImageNet03\n",
+      "Find beh info in sub-core02_ses-ImageNet04\n",
+      "Not Find beh info in sub-core03_ses-ImageNet01\n",
+      "Find beh info in sub-core03_ses-ImageNet02\n",
+      "Find beh info in sub-core03_ses-ImageNet03\n",
+      "Find beh info in sub-core03_ses-ImageNet04\n",
+      "Find beh info in sub-core04_ses-ImageNet01\n",
+      "Find beh info in sub-core04_ses-ImageNet02\n",
+      "Find beh info in sub-core04_ses-ImageNet03\n",
+      "Find beh info in sub-core04_ses-ImageNet04\n",
+      "Find beh info in sub-core05_ses-ImageNet01\n",
+      "Find beh info in sub-core05_ses-ImageNet02\n",
+      "Find beh info in sub-core05_ses-ImageNet03\n",
+      "Find beh info in sub-core05_ses-ImageNet04\n",
+      "Find beh info in sub-core06_ses-ImageNet01\n",
+      "Find beh info in sub-core06_ses-ImageNet02\n",
+      "Find beh info in sub-core06_ses-ImageNet03\n",
+      "Find beh info in sub-core06_ses-ImageNet04\n",
+      "Find beh info in sub-core07_ses-ImageNet01\n",
+      "Find beh info in sub-core07_ses-ImageNet02\n",
+      "Find beh info in sub-core08_ses-ImageNet01\n",
+      "Find beh info in sub-core08_ses-ImageNet02\n",
+      "Find beh info in sub-core08_ses-ImageNet03\n",
+      "Find beh info in sub-core08_ses-ImageNet04\n",
+      "Find beh info in sub-core09_ses-ImageNet01\n",
+      "Find beh info in sub-core09_ses-ImageNet02\n",
+      "Find beh info in sub-core09_ses-ImageNet03\n",
+      "Find beh info in sub-core09_ses-ImageNet04\n",
+      "Find beh info in sub-core10_ses-ImageNet01\n",
+      "Find beh info in sub-core10_ses-ImageNet02\n",
+      "Find beh info in sub-core10_ses-ImageNet03\n",
+      "Find beh info in sub-core10_ses-ImageNet04\n",
+      "Not Find beh info in sub07_sess03\n",
+      "Find beh info in sub07_sess04\n",
+      "Find beh info in sub12_sess01\n",
+      "Find beh info in sub13_sess01\n",
+      "Find beh info in sub14_sess01\n",
+      "Find beh info in sub16_sess01\n",
+      "Find beh info in sub17_sess01\n",
+      "Find beh info in sub18_sess01\n",
+      "Find beh info in sub20_sess01\n",
+      "Not Find beh info in sub21_sess01\n",
+      "Find beh info in sub22_sess01\n",
+      "Find beh info in sub24_sess01\n",
+      "Find beh info in sub25_sess01\n",
+      "Find beh info in sub26_sess01\n",
+      "Find beh info in sub27_sess01\n",
+      "Find beh info in sub28_sess01\n",
+      "Find beh info in sub29_sess01\n",
+      "Find beh info in sub30_sess01\n",
+      "Find beh info in sub31_sess01\n",
+      "Find beh info in sub32_sess01\n",
+      "Find beh info in sub33_sess01\n",
+      "Find beh info in sub34_sess01\n",
+      "Find beh info in sub36_sess01\n"
      ]
     }
    ],
@@ -178,11 +178,17 @@
     "            sess_info[n_bin_stim*(run_idx-1):n_bin_stim*run_idx, 3] = run_animate\n",
     "            sess_info[n_bin_stim*(run_idx-1):n_bin_stim*run_idx, 4] = raw_info[:, 4]\n",
     "            sess_info[n_bin_stim*(run_idx-1):n_bin_stim*run_idx, 5] = acc_info\n",
+    "        # # handle specified subject \n",
+    "        if sub_name == 'sub20': \n",
+    "            # in beh exp, sub20-sess01 will not be regarded as the sub07-sess03\n",
+    "            sess_idx = 0\n",
+    "        if sub_name == 'sub07': \n",
+    "            sess_idx += 2 \n",
     "        # Merge recognition experiment info into the csv\n",
-    "        if os.path.exists(pjoin(sess_path, 'sub%02d_sess%02d_run01_beh.mat'%(sub_idx+1, sess_idx+1))):\n",
+    "        if os.path.exists(pjoin(sess_path, 'sub%s_sess%02d_run01_beh.mat'%(sub_name[-2:], sess_idx+1))):\n",
     "            recog_info = np.zeros((500, 4, 4))\n",
     "            for run_recog_idx in range(n_recog_run):\n",
-    "                run_recog_path = pjoin(sess_path, 'sub%02d_sess%02d_run%02d_beh.mat'%(sub_idx+1, sess_idx+1, run_recog_idx+1))\n",
+    "                run_recog_path = pjoin(sess_path, 'sub%s_sess%02d_run%02d_beh.mat'%(sub_name[-2:], sess_idx+1, run_recog_idx+1))\n",
     "                run_recog_info = loadmat(run_recog_path)['trial']\n",
     "                recog_info[:, run_recog_idx] = run_recog_info[:, 1:] # category, condition, reponse, rt\n",
     "            # resort the recog info to match the original trial info\n",
@@ -192,12 +198,14 @@
     "            recog_info = recog_info[category_sess-1]\n",
     "            sess_info[:, -2] = recog_info[:, -1] # recog_rt\n",
     "            sess_info[:, -1] = [1 if x==1 else 0 for x in recog_info[:, -2]] # recog_key\n",
+    "            print(f'Find beh info in {sub_name}_{sess_name}')\n",
+    "        else:\n",
+    "            print(f'Not Find beh info in {sub_name}_{sess_name}')\n",
     "        # merge item into info dataframe\n",
     "        sess_df = pd.DataFrame(sess_info, columns=['sub', 'session', 'run', 'label', 'fMRI_rt', 'fMRI_acc', 'recog_rt', 'recog_key'])\n",
     "        sess_df.insert(3, 'stim', stim_sess)\n",
     "        sess_df.insert(4, 'category', category_sess)\n",
     "        info = pd.concat([info, sess_df], axis=0)\n",
-    "        print(f'Finish {sub_name}_{sess_name}')\n",
     "info.to_csv(pjoin('/nfs/z1/userhome/ZhouMing/workingdir/BIN/action/utils/HAD/result', 'beh_imagenet.csv'), index=False)\n"
    ]
   },
