--- a/analysis/exp_info.ipynb
+++ b/analysis/exp_info.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
     "        # if tmp_categories not in acton_categories:\n",
     "        #     hierarchy.drop([idx], axis=0, inplace=True)\n",
     "        # write info into treemaker\n",
-    "        t.add(tmp_categories, f'{parent_1st}, {parent2nd}')\n",
+    "        t.add(' '+tmp_categories, f'{parent_1st}, {parent2nd}') # add blankspace before the tmp_categories for better plotting \n",
     "    newick_info += t.write().rstrip(';')\n",
     "    if super_idx != 4:\n",
     "        newick_info += ','\n",
