ENH: file upload

--- a/analysis/brain_map.ipynb
+++ b/analysis/brain_map.ipynb
@@ -35,11 +35,19 @@
     "mpl.rcParams['axes.linewidth'] = 2\n",
     "mpl.rcParams.update({'font.size': 12, 'font.family': 'STIXGeneral', 'mathtext.fontset': 'stix'})\n",
     "\n",
+    "# generate surface map for tSNR\n",
     "def save_ciftifile(data, filename):\n",
     "    template = '/nfs/z1/zhenlab/BrainImageNet/NaturalObject/data/bold/Analysis_derivatives/ciftify/sub-core02/MNINonLinear/Results/ses-ImageNet01_task-object_run-1/ses-ImageNet01_task-object_run-1_Atlas.dtseries.nii'\n",
     "    ex_cii = nib.load(template)\n",
-    "    ex_cii.header.get_index_map(0).number_of_series_points = data.shape[0]\n",
-    "    nib.save(nib.Cifti2Image(data.astype(np.float32), ex_cii.header), filename)\n",
+    "    ex_cii.header.get_index_map(0).number_of_series_points = 1\n",
+    "    # check data shape\n",
+    "    if data.shape[0] == 59412:\n",
+    "        brain_map = np.zeros(91282)\n",
+    "        brain_map[:59412] = data\n",
+    "    else:\n",
+    "        brain_map = data\n",
+    "    brain_map = brain_map[np.newaxis, :]\n",
+    "    nib.save(nib.Cifti2Image(brain_map.astype(np.float32), ex_cii.header), filename)\n",
     "\n",
     "# define path\n",
     "beta_path = '/nfs/z1/zhenlab/BrainImageNet/action/data/bold/derivatives/beta'\n",
@@ -128,6 +136,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PearsonRResult(statistic=-0.1582378033487074, pvalue=0.033873204359359595)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import pearsonr\n",
+    "\n",
+    "soc_df = beh_df[(beh_df['dim']=='sociality')]\n",
+    "tra_df = beh_df[(beh_df['dim']=='transitivity')]\n",
+    "print(pearsonr(soc_df['mean_score'].to_numpy(), tra_df['mean_score'].to_numpy()))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -197,9 +226,7 @@
     "action_selected.columns = ['social', 'nonsocial', 'transitive', 'intransitive']\n",
     "action_selected.to_csv(pjoin(result_path, 'action_extremum_30.csv'), index=False)\n",
     "\n",
-    "# compute correlation of two brain maps\n",
-    "\n",
-    "\n"
+    "# compute correlation of two brain maps"
    ]
   },
   {
@@ -212,18 +239,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'social_vs_baseline' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-aac3c23cf46b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m# generate beta difference map\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0msub_idx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbeta_sum\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0msocial_vs_baseline\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m     \u001b[0msocial_vs_transitive\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbeta_sum\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msocial_idx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mbeta_sum\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransitive_idx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'social_vs_baseline' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finish transitive\n"
      ]
     }
    ],
@@ -231,37 +254,35 @@
     "from scipy import stats\n",
     "\n",
     "# define contrast\n",
-    "action_selected = pd.read_csv(pjoin(result_path, 'action_t_test.csv'))\n",
-    "n_check = action_selected.shape[0]\n",
+    "action_selected = pd.read_csv(pjoin(result_path, 'action_self_defined.csv'))\n",
+    "n_select = 6\n",
     "map_path = pjoin(result_path, 'brain_map')\n",
     "dims = ['sociality', 'transitivity']\n",
     "class_names = beh_df['class']\n",
     "class_names.drop_duplicates(inplace=True)\n",
     "class_names.reset_index(inplace=True, drop=True)\n",
-    "p_threshold = 0.001\n",
+    "p_threshold = 0.01\n",
     "baseline = beta_sum.mean(axis=(0,1))\n",
-    "social_idx = [class_names[class_names==action_selected.iloc[x, 0]].index[0] for x in range(n_check)]\n",
-    "transitive_idx = [class_names[class_names==action_selected.iloc[x, 1]].index[0] for x in range(n_check)]\n",
+    "social_idx = [class_names[class_names==action_selected.iloc[x, 0]].index[0] for x in range(n_select)]\n",
+    "nonsocial_idx = [class_names[class_names==action_selected.iloc[x, 1]].index[0] for x in range(n_select)]\n",
+    "transitive_idx = [class_names[class_names==action_selected.iloc[x, 2]].index[0] for x in range(n_select)]\n",
+    "intransitive_idx = [class_names[class_names==action_selected.iloc[x, 3]].index[0] for x in range(n_select)]\n",
     "\n",
     "# generate beta difference map\n",
-    "social_vs_baseline =  beta_sum[:, social_idx, :].mean(axis=1) - beta_sum.mean(axis=1)\n",
-    "transitive_vs_baseline =  beta_sum[:, transitive_idx, :].mean(axis=1) - beta_sum.mean(axis=1)\n",
-    "social_vs_transitive = beta_sum[:, social_idx, :].mean(axis=1) - beta_sum[:, transitive_idx, :].mean(axis=1)\n",
+    "social_contrast = beta_sum[:, social_idx, :].mean(axis=1) - beta_sum[:, nonsocial_idx, :].mean(axis=1)\n",
+    "transitive_contrast = beta_sum[:, transitive_idx, :].mean(axis=1) - beta_sum[:, intransitive_idx, :].mean(axis=1)\n",
     "\n",
-    "social_vs_baseline_map = np.zeros((1, 91282))\n",
-    "transitive_vs_baseline_map = np.zeros((1, 91282))\n",
-    "social_vs_transitive_map = np.zeros((1, 91282))\n",
-    "\n",
-    "contrasts = ['social_vs_baseline', 'transitive_vs_baseline', 'social_vs_transitive']\n",
+    "social_map = np.zeros((59412))\n",
+    "transitive_map = np.zeros((59412))\n",
+    "contrasts = ['transitive']\n",
     "# perform independent t-test in each voxel\n",
-    "for voxel_idx in range(59412):\n",
-    "    for contrast in contrasts:\n",
-    "        # perform 1 sample test\n",
-    "        stat_result = stats.ttest_1samp(eval(contrast), popmean=0)\n",
-    "        if stat_result[1] < p_threshold:\n",
-    "            brain_map[0, voxel_idx] = stat_result[0]\n",
-    "        save_ciftifile(brain_map, pjoin(map_path, f'{contrasts}_map_p-{p_threshold}.dtseries.nii'))\n",
-    "    print('Finish voxel %05d in %s'%(voxel_idx, dim))\n"
+    "for contrast in contrasts:\n",
+    "    # perform 1 sample test\n",
+    "    stat_result = stats.ttest_1samp(eval(f'{contrast}_contrast'), popmean=0)\n",
+    "    significant_loc = stat_result[1] < p_threshold\n",
+    "    eval(f'{contrast}_map')[significant_loc] = stat_result[0][significant_loc]\n",
+    "    save_ciftifile(eval(f'{contrast}_map'), pjoin(map_path, f'{contrast}_map_p-{p_threshold}.dtseries.nii'))\n",
+    "    print('Finish %s'%(contrast))\n"
    ]
   },
   {
