--- a/analysis/tSNE.ipynb
+++ b/analysis/tSNE.ipynb
@@ -2,6 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.io as sio\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import shutil\n",
+    "from os.path import join as pjoin\n",
+    "\n",
+    "beta_path = '/nfs/z1/zhenlab/BrainImageNet/NaturalObject/data/bold/derivatives/beta'\n",
+    "image_path = '/nfs/z1/userhome/ZhouMing/workingdir/BIN/NaturalObject/exp/stim/images'\n",
+    "dst_tmp_path = '/nfs/z1/userhome/ZhouMing/workingdir/BIN/NaturalObject/data/code/nodanalysis/test_image'\n",
+    "sub_name = 'sub-03'\n",
+    "\n",
+    "animacy_arr = sio.loadmat('/nfs/z1/userhome/GongZhengXin/NVP/NaturalObject/exp/animate_or_not.mat')['animate_label'].squeeze()\n",
+    "label_sub = pd.read_csv(pjoin(beta_path, sub_name, f'{sub_name}_imagenet-label.csv'))[:1000]\n",
+    "label_sub = label_sub.sort_values(by='class_id')\n",
+    "stim_name = label_sub['image_name']\n",
+    "\n",
+    "animate_images = stim_name[animacy_arr==1].to_list()\n",
+    "inanimate_images = stim_name[animacy_arr==-1].to_list()\n",
+    "\n",
+    "# copy images to another fold\n",
+    "for tmp_image in animate_images:\n",
+    "    src = pjoin(image_path, tmp_image.split('_')[0], tmp_image)\n",
+    "    dst = pjoin(dst_tmp_path, sub_name, 'animate', tmp_image)\n",
+    "    shutil.copyfile(src, dst)\n",
+    "\n",
+    "for tmp_image in inanimate_images:\n",
+    "    src = pjoin(image_path, tmp_image.split('_')[0], tmp_image)\n",
+    "    dst = pjoin(dst_tmp_path, sub_name, 'inanimate', tmp_image)\n",
+    "    shutil.copyfile(src, dst)    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -588,7 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.5 (default, Sep  4 2020, 07:30:14) \n[GCC 7.3.0]"
   },
   "orig_nbformat": 4
  },
